Added account management layouts
More prep work for account management

Modified colors.xml to include a host of other colors I've used before
(including android orange)

--- a/AAUApp/res/values/colors.xml
+++ b/AAUApp/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-<color name="text">#3a91d8</color>
+	<color name="text">#3a91d8</color>
+    <color name="black">#000000</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#666666</color>
+    <color name="backbar">#313131</color>
+    <color name="orange">#C88141</color>
+    <color name="slategray">#25383C</color>
+    <color name="dkgray">#2f3239</color>
 
 </resources>
