Testing synch updates. Renamed 1 button to shorter version and updated 2 references in my .xml layouts

--- a/AAUApp/res/layout/player_update_fragment.xml
+++ b/AAUApp/res/layout/player_update_fragment.xml
@@ -162,7 +162,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tvFTP"
         android:layout_marginTop="20dp"
-        android:background="@drawable/btn_default_holo_dark" 
+        android:background="@drawable/btnDark" 
         android:text="@string/update"
         android:textColor="@color/text"
     />
