Revert "Testing synch updates. Renamed 1 button to shorter version and updated 2 references in my .xml layouts"
This reverts commit f86a1707c12f9669596ddb1ad13d52db13587926.

--- a/AAUApp/res/layout/mainscreen_fragment.xml
+++ b/AAUApp/res/layout/mainscreen_fragment.xml
@@ -15,7 +15,7 @@
         android:layout_height="75dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="110dp"
-        android:background="@drawable/btnDark" 
+        android:background="@drawable/btn_default_normal_holo_dark" 
         android:text="@string/btnPlayerList"
         android:textSize="24sp"
         android:textColor="@color/text"
@@ -28,7 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/btnPlayerList"
         android:layout_marginTop="20dp"
-        android:background="@drawable/btnDark" 
+        android:background="@drawable/btn_default_normal_holo_dark" 
         android:text="@string/btnLogin"
         android:textSize="24sp"
         android:textColor="@color/text"
