--- a/AAUApp/res/drawable/slidingmenu_list_selector_background.xml
+++ b/AAUApp/res/drawable/slidingmenu_list_selector_background.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true"
-        android:drawable="@color/blue_light" />
+        android:drawable="@color/slategray" />
     
     <item android:state_pressed="false"
         android:drawable="@android:color/transparent" />
