--- a/AAUApp/res/drawable/slidingmenu_shadow.xml
+++ b/AAUApp/res/drawable/slidingmenu_shadow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <gradient
-       android:endColor="@color/blue_light"
-       android:centerColor="@color/blue_middle"
-       android:startColor="@color/blue_dark" />
+       android:endColor="@color/light_slategray"
+       android:centerColor="@color/slategray"
+       android:startColor="@color/dark_slategray" />
 </shape>
