--- a/AAUApp/res/layout/menu_sectionitem.xml
+++ b/AAUApp/res/layout/menu_sectionitem.xml
@@ -6,6 +6,7 @@
 
     <ImageView
        android:id="@+id/slidingmenu_sectionitem_icon"
+       android:contentDescription="@string/imgDesc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
         android:layout_centerVertical="true"
@@ -17,7 +18,7 @@
        android:layout_height="50dp"
        android:layout_toRightOf="@id/slidingmenu_sectionitem_icon"
        android:gravity="center_vertical"
-       android:text="TextView"
-       android:textColor="#FFFFFF"/>
+       android:text="@string/sampleText"
+       android:textColor="@color/text"/>
 
 </RelativeLayout>
