--- a/AAUApp/res/layout/menu_sectionview.xml
+++ b/AAUApp/res/layout/menu_sectionview.xml
@@ -3,18 +3,18 @@
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
-   android:background="@color/blue_dark">
+   android:background="@color/dark_slategray">
     
     <TextView
        android:id="@+id/slidingmenu_section_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="Section"
+       android:text="@string/section"
        android:textSize="18sp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
-       android:background="@color/blue_dark"
-       android:textColor="#FFFFFF"/>
+       android:background="@color/dark_slategray"
+       android:textColor="@color/text"/>
     
 </LinearLayout>
